# GoogleCloudPlatform-_-conversational-insights-devkit

./: GEMINI.md  README.md  build.sh  local.py  plan.md  pyproject.toml  requirements.txt
examples/: 01-wrapper-storage.ipynb  02-wrapper-insights.ipynb  03-wrapper-speech.ipynb  04-wrapper-agents.ipynb  05-wrapper-sheets.ipynb  06-wrapper-vertex.ipynb  07-wrapper-iam.ipynb  08-workflow-format.ipynb  09-workflow-audio.ipynb  10-workflow-authorized_views.ipynb  11-workflow-content_generator.ipynb  12-workflow-role_recognizer.ipynb
src/conidk/: README.md  py.typed
src/conidk/core/: README.md  base.py
src/conidk/workflow/: README.md  audio.py  content_generator.py  format.py  role_recognizer.py  views_manager.py
src/conidk/wrapper/: README.md  agents.py  iam.py  insights.py  sensitive_data_protection.py  sheets.py  speech.py  storage.py  vertex.py
src/workflow/insight_refinements/: analysis.py  bq_client.py  bulk_feedback.py  evaluation.py  optimization.py  taxonomy_utils.py  topic_refinement.py
src/workflow/qai_pipeline/: analysis.py  bq_client.py  bulk_feedback.py  optimization.py  taxonomy_utils.py  topic_refinement.py
src/wrapper/: insights.py
tests/demo/: test_agent_nga_chat.py  test_agentic_chat.py  test_human_chat.py  test_human_voice.py
tests/integration/: test_audios.py  test_core.py  test_files.py  test_insight_refinements.py  test_insights_ingestion.py  test_views_manager.py
tests/unit/: test_agents.py  test_audio.py  test_base.py  test_content_generator.py  test_format.py  test_iam.py  test_insights.py  test_role_recognizer.py  test_sensitive_data_protection.py  test_sheets.py  test_speech.py  test_storage.py  test_vertex.py  test_views_manager.py
tests/unit/insight_refinements/: test_bq_client.py  test_bulk_feedback.py  test_config.py  test_logic.py  test_optimization.py  test_standardize_taxonomy.py  test_topic_refinement.py  test_utils.py
tests/unit/qai_pipeline/: test_bq_client.py  test_bulk_feedback.py  test_config.py  test_logic.py  test_optimization.py  test_standardize_taxonomy.py  test_topic_refinement.py  test_utils.py
(+55 files in other folders)
